tests/ui/bitfield/field_value_out_of_bounds_unsigned_8_1_u8.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/bitfield/field_value_out_of_bounds_unsigned_8_1_u8.rs:6:36
  |
6 | struct BitField(#[field(size = 1)] Field); // Can only store values between `0..=1`.
  |                                    ^^^^^ the evaluated program panicked at 'Size of the field type exceeds the specified field size of 1 bit', $DIR/tests/ui/bitfield/field_value_out_of_bounds_unsigned_8_1_u8.rs:6:36
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
